k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mlops-ip"
    networking.gke.io/managed-certificates: "mlops-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: "mlops.example.com"
    http:
      paths:
      - path: /covid/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: covid-prediction-service
            port:
              number: 8000
      - path: /churn/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: churn-prediction-service
            port:
              number: 8001
      - path: /health/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: covid-prediction-service
            port:
              number: 8000
